anyway From Mac

--- a/client6.html
+++ b/client6.html
@@ -39,7 +39,7 @@
 
     <!-- <button onclick="text_to_qr()">text_to_qr</button> -->
 
-    <a href="" id="url_with_peer_id">通話用URL</a>
+    <a href="" id="url_with_peer_id">url_with_peer_id</a>
     <p>サーバーサイドのコードは https://glitch.com/edit/#!/cypress-serious-bird?path=server.js</p>
     <p>参考にしたコードは https://glitch.com/~peerjs-video</p>
     <!-- <button onclick="exe_connection()">exe_connection</button> -->
